src/main/java/antlr/BasicParser.java
// Generated from ./BasicParser.g4 by ANTLR 4.9.3
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, WS=2, EOL=3, BEGIN=4, END=5, IS=6, PAIR=7, SKP=8, READ=9, FREE=10, 
		RETURN=11, EXIT=12, PRINT=13, PRINTLN=14, IF=15, THEN=16, ELSE=17, FI=18, 
		FOR=19, WHILE=20, DO=21, DONE=22, NEWPAIR=23, CALL=24, FST=25, SND=26, 
		BOOL=27, INT=28, CHAR=29, STRING=30, VOID=31, COMMA=32, SEMICOL=33, NOT=34, 
		LEN=35, ORD=36, CHR=37, BITWISE_NOT=38, PLUS=39, MINUS=40, MULT=41, DIVIDE=42, 
		MOD=43, GT=44, ST=45, GTE=46, STE=47, EQ=48, NEQ=49, AND=50, OR=51, BITWISE_AND=52, 
		BITWISE_XOR=53, BITWISE_OR=54, OPEN_PARENTHESES=55, CLOSE_PARENTHESES=56, 
		OPEN_BRACKETS=57, CLOSE_BRACKETS=58, IDENT=59, EQUAL=60, CHAR_LIT=61, 
		STRING_LIT=62, BOOL_LIT=63, BIN_INT_LIT=64, OCT_INT_LIT=65, HEX_INT_LIT=66, 
		INT_LIT=67, PAIR_LIT=68;
	public static final int
		RULE_mulDivModOper = 0, RULE_plusMinusOper = 1, RULE_compOper = 2, RULE_eqOper = 3, 
		RULE_bitwiseAndOper = 4, RULE_bitwiseXorOper = 5, RULE_bitwiseOrOper = 6, 
		RULE_andOper = 7, RULE_orOper = 8, RULE_baseType = 9, RULE_pairElem = 10, 
		RULE_pairElemType = 11, RULE_pairType = 12, RULE_type = 13, RULE_arrayElem = 14, 
		RULE_arrayType = 15, RULE_arrayLiter = 16, RULE_unaryOper = 17, RULE_expr = 18, 
		RULE_param = 19, RULE_paramList = 20, RULE_assignLHS = 21, RULE_argList = 22, 
		RULE_functionCall = 23, RULE_newpair = 24, RULE_assignRHS = 25, RULE_declareStat = 26, 
		RULE_assignStat = 27, RULE_readStat = 28, RULE_freeStat = 29, RULE_returnStat = 30, 
		RULE_exitStat = 31, RULE_printStat = 32, RULE_printlnStat = 33, RULE_ifStat = 34, 
		RULE_whileStat = 35, RULE_beginStat = 36, RULE_voidFuncCallStat = 37, 
		RULE_stat = 38, RULE_func = 39, RULE_prog = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"mulDivModOper", "plusMinusOper", "compOper", "eqOper", "bitwiseAndOper", 
			"bitwiseXorOper", "bitwiseOrOper", "andOper", "orOper", "baseType", "pairElem", 
			"pairElemType", "pairType", "type", "arrayElem", "arrayType", "arrayLiter", 
			"unaryOper", "expr", "param", "paramList", "assignLHS", "argList", "functionCall", 
			"newpair", "assignRHS", "declareStat", "assignStat", "readStat", "freeStat", 
			"returnStat", "exitStat", "printStat", "printlnStat", "ifStat", "whileStat", 
			"beginStat", "voidFuncCallStat", "stat", "func", "prog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'\n'", "'begin'", "'end'", "'is'", "'pair'", "'skip'", 
			"'read'", "'free'", "'return'", "'exit'", "'print'", "'println'", "'if'", 
			"'then'", "'else'", "'fi'", "'for'", "'while'", "'do'", "'done'", "'newpair'", 
			"'call'", "'fst'", "'snd'", "'bool'", "'int'", "'char'", "'string'", 
			"'void'", "','", "';'", "'!'", "'len'", "'ord'", "'chr'", "'~'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
			"'&&'", "'||'", "'&'", "'^'", "'|'", "'('", "')'", "'['", "']'", null, 
			"'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "WS", "EOL", "BEGIN", "END", "IS", "PAIR", "SKP", "READ", 
			"FREE", "RETURN", "EXIT", "PRINT", "PRINTLN", "IF", "THEN", "ELSE", "FI", 
			"FOR", "WHILE", "DO", "DONE", "NEWPAIR", "CALL", "FST", "SND", "BOOL", 
			"INT", "CHAR", "STRING", "VOID", "COMMA", "SEMICOL", "NOT", "LEN", "ORD", 
			"CHR", "BITWISE_NOT", "PLUS", "MINUS", "MULT", "DIVIDE", "MOD", "GT", 
			"ST", "GTE", "STE", "EQ", "NEQ", "AND", "OR", "BITWISE_AND", "BITWISE_XOR", 
			"BITWISE_OR", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "OPEN_BRACKETS", 
			"CLOSE_BRACKETS", "IDENT", "EQUAL", "CHAR_LIT", "STRING_LIT", "BOOL_LIT", 
			"BIN_INT_LIT", "OCT_INT_LIT", "HEX_INT_LIT", "INT_LIT", "PAIR_LIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BasicParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MulDivModOperContext extends ParserRuleContext {
		public TerminalNode MULT() { return getToken(BasicParser.MULT, 0); }
		public TerminalNode DIVIDE() { return getToken(BasicParser.DIVIDE, 0); }
		public TerminalNode MOD() { return getToken(BasicParser.MOD, 0); }
		public MulDivModOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulDivModOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitMulDivModOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MulDivModOperContext mulDivModOper() throws RecognitionException {
		MulDivModOperContext _localctx = new MulDivModOperContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mulDivModOper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULT) | (1L << DIVIDE) | (1L << MOD))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlusMinusOperContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(BasicParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(BasicParser.MINUS, 0); }
		public PlusMinusOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plusMinusOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPlusMinusOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlusMinusOperContext plusMinusOper() throws RecognitionException {
		PlusMinusOperContext _localctx = new PlusMinusOperContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_plusMinusOper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompOperContext extends ParserRuleContext {
		public TerminalNode GT() { return getToken(BasicParser.GT, 0); }
		public TerminalNode GTE() { return getToken(BasicParser.GTE, 0); }
		public TerminalNode ST() { return getToken(BasicParser.ST, 0); }
		public TerminalNode STE() { return getToken(BasicParser.STE, 0); }
		public CompOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitCompOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompOperContext compOper() throws RecognitionException {
		CompOperContext _localctx = new CompOperContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_compOper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << ST) | (1L << GTE) | (1L << STE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqOperContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(BasicParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(BasicParser.NEQ, 0); }
		public EqOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitEqOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqOperContext eqOper() throws RecognitionException {
		EqOperContext _localctx = new EqOperContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_eqOper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !(_la==EQ || _la==NEQ) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BitwiseAndOperContext extends ParserRuleContext {
		public TerminalNode BITWISE_AND() { return getToken(BasicParser.BITWISE_AND, 0); }
		public BitwiseAndOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bitwiseAndOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitBitwiseAndOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BitwiseAndOperContext bitwiseAndOper() throws RecognitionException {
		BitwiseAndOperContext _localctx = new BitwiseAndOperContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bitwiseAndOper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(BITWISE_AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BitwiseXorOperContext extends ParserRuleContext {
		public TerminalNode BITWISE_XOR() { return getToken(BasicParser.BITWISE_XOR, 0); }
		public BitwiseXorOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bitwiseXorOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitBitwiseXorOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BitwiseXorOperContext bitwiseXorOper() throws RecognitionException {
		BitwiseXorOperContext _localctx = new BitwiseXorOperContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bitwiseXorOper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(BITWISE_XOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BitwiseOrOperContext extends ParserRuleContext {
		public TerminalNode BITWISE_OR() { return getToken(BasicParser.BITWISE_OR, 0); }
		public BitwiseOrOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bitwiseOrOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitBitwiseOrOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BitwiseOrOperContext bitwiseOrOper() throws RecognitionException {
		BitwiseOrOperContext _localctx = new BitwiseOrOperContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bitwiseOrOper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(BITWISE_OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndOperContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(BasicParser.AND, 0); }
		public AndOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitAndOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndOperContext andOper() throws RecognitionException {
		AndOperContext _localctx = new AndOperContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_andOper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrOperContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(BasicParser.OR, 0); }
		public OrOperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orOper; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitOrOper(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrOperContext orOper() throws RecognitionException {
		OrOperContext _localctx = new OrOperContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_orOper);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(BasicParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(BasicParser.BOOL, 0); }
		public TerminalNode CHAR() { return getToken(BasicParser.CHAR, 0); }
		public TerminalNode STRING() { return getToken(BasicParser.STRING, 0); }
		public BaseTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitBaseType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseTypeContext baseType() throws RecognitionException {
		BaseTypeContext _localctx = new BaseTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_baseType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOL) | (1L << INT) | (1L << CHAR) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairElemContext extends ParserRuleContext {
		public TerminalNode FST() { return getToken(BasicParser.FST, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SND() { return getToken(BasicParser.SND, 0); }
		public PairElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairElem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPairElem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairElemContext pairElem() throws RecognitionException {
		PairElemContext _localctx = new PairElemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pairElem);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FST:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				match(FST);
				setState(103);
				expr(0);
				}
				break;
			case SND:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(SND);
				setState(105);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairElemTypeContext extends ParserRuleContext {
		public BaseTypeContext baseType() {
			return getRuleContext(BaseTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OPEN_BRACKETS() { return getToken(BasicParser.OPEN_BRACKETS, 0); }
		public TerminalNode CLOSE_BRACKETS() { return getToken(BasicParser.CLOSE_BRACKETS, 0); }
		public TerminalNode PAIR() { return getToken(BasicParser.PAIR, 0); }
		public PairElemTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairElemType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPairElemType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairElemTypeContext pairElemType() throws RecognitionException {
		PairElemTypeContext _localctx = new PairElemTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pairElemType);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				baseType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				type(0);
				setState(110);
				match(OPEN_BRACKETS);
				setState(111);
				match(CLOSE_BRACKETS);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(PAIR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairTypeContext extends ParserRuleContext {
		public TerminalNode PAIR() { return getToken(BasicParser.PAIR, 0); }
		public TerminalNode OPEN_PARENTHESES() { return getToken(BasicParser.OPEN_PARENTHESES, 0); }
		public List<PairElemTypeContext> pairElemType() {
			return getRuleContexts(PairElemTypeContext.class);
		}
		public PairElemTypeContext pairElemType(int i) {
			return getRuleContext(PairElemTypeContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(BasicParser.COMMA, 0); }
		public TerminalNode CLOSE_PARENTHESES() { return getToken(BasicParser.CLOSE_PARENTHESES, 0); }
		public PairTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitPairType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairTypeContext pairType() throws RecognitionException {
		PairTypeContext _localctx = new PairTypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_pairType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(PAIR);
			setState(117);
			match(OPEN_PARENTHESES);
			setState(118);
			pairElemType();
			setState(119);
			match(COMMA);
			setState(120);
			pairElemType();
			setState(121);
			match(CLOSE_PARENTHESES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public BaseTypeContext baseType() {
			return getRuleContext(BaseTypeContext.class,0);
		}
		public PairTypeContext pairType() {
			return getRuleContext(PairTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode OPEN_BRACKETS() { return getToken(BasicParser.OPEN_BRACKETS, 0); }
		public TerminalNode CLOSE_BRACKETS() { return getToken(BasicParser.CLOSE_BRACKETS, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 26;
		enterRecursionRule(_localctx, 26, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
			case CHAR:
			case STRING:
				{
				setState(124);
				baseType();
				}
				break;
			case PAIR:
				{
				setState(125);
				pairType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(128);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(129);
					match(OPEN_BRACKETS);
					setState(130);
					match(CLOSE_BRACKETS);
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArrayElemContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BasicParser.IDENT, 0); }
		public List<TerminalNode> OPEN_BRACKETS() { return getTokens(BasicParser.OPEN_BRACKETS); }
		public TerminalNode OPEN_BRACKETS(int i) {
			return getToken(BasicParser.OPEN_BRACKETS, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> CLOSE_BRACKETS() { return getTokens(BasicParser.CLOSE_BRACKETS); }
		public TerminalNode CLOSE_BRACKETS(int i) {
			return getToken(BasicParser.CLOSE_BRACKETS, i);
		}
		public ArrayElemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayElem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BasicParserVisitor ) return ((BasicParserVisitor<? extends T>)visitor).visitArrayElem(this);
			else return visitor.visitChildren(this);
		}
	}
